Contract SSO management APIs
